# apps/device/views.py
@@ -1,11 +1,22 @@
 from drf_spectacular.utils import extend_schema
 from drf_spectacular.utils import OpenApiExample
-from drf_spectacular.utils import OpenApiResponse
 from rest_framework.decorators import action
+from rest_framework.generics import RetrieveAPIView
 from rest_framework.response import Response
 
 from apps.core.lib import views
-from apps.device import models, services, serializers
+from apps.device import models
+from apps.device import serializers
+from apps.device import services
+
+
+def retrieve_related(request, model, queryset):
+    serializer = serializers.serializers.make_serializer_class(model)(
+        instance=queryset,
+        many=True,
+        context={"request": request},
+    )
+    return Response(serializer.data)
 
 
 class Company(views.ModelViewSet):
@@ -15,6 +26,13 @@ class Company(views.ModelViewSet):
         "name",
     ]
 
+    @action(detail=True)
+    def products(self, request, *args, **kwargs):
+        """Retrieve all products for the current company."""
+        return retrieve_related(
+            request, models.Product, self.get_object().product_set.all(),
+        )
+
 
 class Category(views.ModelViewSet):
     serializer_class = serializers.Category
@@ -22,6 +40,13 @@ class Category(views.ModelViewSet):
     search_fields = [
         "name",
     ]
+
+    @action(detail=True)
+    def products(self, request, *args, **kwargs):
+        """Retrieve all products for the current company."""
+        return retrieve_related(
+            request, models.Product, self.get_object().product_set.all(),
+        )
 
 
 class Product(views.ModelViewSet):
@@ -32,6 +57,13 @@ class Product(views.ModelViewSet):
         "company__name",
     ]
 
+    @action(detail=True)
+    def series(self, request, *args, **kwargs):
+        """Retrieve all series for the current product."""
+        return retrieve_related(
+            request, models.Series, self.get_object().series_set.all(),
+        )
+
 
 class Series(views.ModelViewSet):
     serializer_class = serializers.Series
@@ -41,6 +73,13 @@ class Series(views.ModelViewSet):
         "product__name",
         "product__company__name",
     ]
+
+    @action(detail=True)
+    def models(self, request, *args, **kwargs):
+        """Retrieve all models for the current series."""
+        return retrieve_related(
+            request, models.Model, self.get_object().model_set.all(),
+        )
 
 
 class Model(views.ModelViewSet):
@@ -64,9 +103,11 @@ class Model(views.ModelViewSet):
         return Response(data)
 
     @extend_schema(examples=[
-        OpenApiExample("", [{"Storage": "256G", "Color": "Red"}]),
+        OpenApiExample("sample", [
+            {"Storage": "256G", "Color": "Red", "price": "100", "id": "1"}
+        ]),
     ])
-    @action(detail=True)
+    @action(detail=True, url_path="available-variants")
     def available_variants(self, *args, **kwargs):
         """Retrieve the variants existing in stock for this model."""
         model = self.get_object()
@@ -83,7 +124,7 @@ class VariantGroup(views.ModelViewSet):
 class VariantValue(views.ModelViewSet):
     serializer_class = serializers.VariantValue
     queryset = models.VariantValue.objects.all()
-    search_fields = ["value"]
+    search_fields = ["name"]
 
 
 class ModelVariant(views.ModelViewSet):
